fix sizing issue on the connect button

--- a/earthquake/Base.lproj/MainMenu.xib
+++ b/earthquake/Base.lproj/MainMenu.xib
@@ -545,8 +545,11 @@
                                             </textFieldCell>
                                         </textField>
                                         <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PRB-cb-tcj">
-                                            <rect key="frame" x="109" y="376" width="374" height="22"/>
+                                            <rect key="frame" x="109" y="376" width="360" height="22"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="360" id="Y1G-9Y-NW7"/>
+                                            </constraints>
                                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" state="on" borderStyle="bezel" placeholderString="Enter the hostname or IP address of the server" drawsBackground="YES" id="bwr-Yc-rmG">
                                                 <font key="font" metaFont="system"/>
                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -554,7 +557,7 @@
                                             </textFieldCell>
                                         </textField>
                                         <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gwm-yZ-ufr">
-                                            <rect key="frame" x="485" y="370" width="101" height="32"/>
+                                            <rect key="frame" x="471" y="370" width="115" height="32"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <buttonCell key="cell" type="push" title=" Connect " bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Eum-s5-Iz2">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -638,6 +641,7 @@
                                         <constraint firstItem="4Zs-lU-rZ8" firstAttribute="top" relation="greaterThanOrEqual" secondItem="g4B-vW-Nd5" secondAttribute="top" constant="33" id="2KA-zU-E7i"/>
                                         <constraint firstItem="z9f-Ry-OCg" firstAttribute="top" secondItem="Ovj-9F-09k" secondAttribute="bottom" constant="9" id="2xK-IB-6YN"/>
                                         <constraint firstItem="z9f-Ry-OCg" firstAttribute="leading" secondItem="g4B-vW-Nd5" secondAttribute="leading" constant="17" id="3Yv-Fc-deT"/>
+                                        <constraint firstItem="gwm-yZ-ufr" firstAttribute="leading" secondItem="PRB-cb-tcj" secondAttribute="trailing" constant="8" symbolic="YES" id="J9a-Eq-Tb1"/>
                                         <constraint firstAttribute="trailing" secondItem="4Zs-lU-rZ8" secondAttribute="trailing" constant="41" id="KPA-ZZ-OGl"/>
                                         <constraint firstItem="N4I-ua-MnR" firstAttribute="top" secondItem="g4B-vW-Nd5" secondAttribute="top" constant="32" id="LWY-Cp-5pJ"/>
                                         <constraint firstItem="4Zs-lU-rZ8" firstAttribute="leading" secondItem="gwm-yZ-ufr" secondAttribute="trailing" constant="4" id="LgW-se-bqe"/>
@@ -649,18 +653,16 @@
                                         <constraint firstItem="4Zs-lU-rZ8" firstAttribute="leading" secondItem="gwm-yZ-ufr" secondAttribute="trailing" constant="4" id="P8l-8j-Oyb"/>
                                         <constraint firstItem="Ovj-9F-09k" firstAttribute="top" secondItem="O4E-rc-n4B" secondAttribute="bottom" constant="20" id="Pbg-1e-CWh"/>
                                         <constraint firstItem="O4E-rc-n4B" firstAttribute="top" secondItem="R0b-gA-Cec" secondAttribute="bottom" constant="13" id="RNc-YP-NrQ"/>
+                                        <constraint firstItem="PRB-cb-tcj" firstAttribute="leading" secondItem="N4I-ua-MnR" secondAttribute="trailing" constant="8" symbolic="YES" id="SMC-gu-lvt"/>
+                                        <constraint firstItem="PRB-cb-tcj" firstAttribute="top" secondItem="gwm-yZ-ufr" secondAttribute="top" id="Ss9-XH-9Oa"/>
                                         <constraint firstItem="O4E-rc-n4B" firstAttribute="top" secondItem="g4B-vW-Nd5" secondAttribute="top" constant="66" id="VIV-XP-PHA"/>
                                         <constraint firstItem="O4E-rc-n4B" firstAttribute="leading" secondItem="g4B-vW-Nd5" secondAttribute="leading" constant="19" id="WrG-Ez-ktc"/>
                                         <constraint firstItem="l7x-5B-s8a" firstAttribute="trailing" secondItem="z9f-Ry-OCg" secondAttribute="trailing" id="Yxz-Yq-Seh"/>
-                                        <constraint firstItem="O4E-rc-n4B" firstAttribute="top" secondItem="PRB-cb-tcj" secondAttribute="bottom" constant="14" id="avw-fw-bbf"/>
                                         <constraint firstItem="O4E-rc-n4B" firstAttribute="leading" secondItem="N4I-ua-MnR" secondAttribute="leading" id="do4-5y-rhU"/>
                                         <constraint firstItem="R0b-gA-Cec" firstAttribute="leading" secondItem="4Zs-lU-rZ8" secondAttribute="trailing" constant="-1" id="fBj-8u-wkY"/>
                                         <constraint firstItem="R0b-gA-Cec" firstAttribute="top" secondItem="g4B-vW-Nd5" secondAttribute="top" constant="28" id="lYu-6I-CwO"/>
-                                        <constraint firstItem="gwm-yZ-ufr" firstAttribute="leading" secondItem="PRB-cb-tcj" secondAttribute="trailing" constant="8" id="mwW-vR-F3W"/>
-                                        <constraint firstItem="PRB-cb-tcj" firstAttribute="leading" secondItem="N4I-ua-MnR" secondAttribute="trailing" constant="8" id="sGn-St-xZy"/>
                                         <constraint firstItem="4Zs-lU-rZ8" firstAttribute="top" secondItem="g4B-vW-Nd5" secondAttribute="top" constant="33" id="sRh-u5-8cs"/>
                                         <constraint firstItem="l7x-5B-s8a" firstAttribute="leading" secondItem="z9f-Ry-OCg" secondAttribute="leading" id="tOs-1s-i6n"/>
-                                        <constraint firstItem="gwm-yZ-ufr" firstAttribute="leading" secondItem="PRB-cb-tcj" secondAttribute="trailing" constant="8" id="tkV-LI-boV"/>
                                         <constraint firstItem="N4I-ua-MnR" firstAttribute="leading" secondItem="g4B-vW-Nd5" secondAttribute="leading" constant="19" id="u00-Q2-da4"/>
                                         <constraint firstItem="Ovj-9F-09k" firstAttribute="top" secondItem="g4B-vW-Nd5" secondAttribute="top" constant="261" id="uIH-KW-VTk"/>
                                         <constraint firstItem="Ovj-9F-09k" firstAttribute="leading" secondItem="z9f-Ry-OCg" secondAttribute="leading" id="wkB-Pz-IHA"/>
