--- a/earthquake/Base.lproj/MainMenu.xib
+++ b/earthquake/Base.lproj/MainMenu.xib
@@ -616,7 +616,7 @@
                                                                 </textFieldCell>
                                                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                             </tableColumn>
-                                                            <tableColumn identifier="filesize" width="159" minWidth="10" maxWidth="3.4028234663852886e+38" id="mIg-8l-f94">
+                                                            <tableColumn identifier="filesize" editable="NO" width="159" minWidth="10" maxWidth="3.4028234663852886e+38" id="mIg-8l-f94">
                                                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Size">
                                                                     <font key="font" metaFont="smallSystem"/>
                                                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
